--- a/_sass/layout/_sectionLayout.scss
+++ b/_sass/layout/_sectionLayout.scss
@@ -150,7 +150,6 @@
     gap: var(--spacing-sm);
     visibility: visible;
     position: relative;
-    z-index: 1;
 }
 
 .nds-readMore {
